# tanunekolab_portfolio

./: about.html  about_en.html  index.html  index_en.html  main.py  projects.html  projects_personal.html  projects_personal_en.html  pyproject.toml  readme.md  styles.css
src/: ftp_client.py
webpage/: about.html  about_en.html  index.html  index_en.html  projects.html  projects_en.html  projects_personal.html  projects_personal_en.html  styles.css
